Swagger setup OAuth

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Auth": {
+    "Key": "SomeSecretWhichNormallyShouldNotBeInSourceControl",
+    "Issuer": "demo",
+    "Audience": "demo"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
